
[metadata]
name = my-package
description = My package description
long_description = file: README.md
author = Logan Reed
author_email = me@loganreed.org
url = https://github.com/orlogan/python-template/tree/main
license = BSD 3-Clause License

[options]
zip_safe = False
packages = find:
install_requires =
    numpy

[options.extras_require]
test =
     pytest
